--- a/Niteesh/static/html/cover.html
+++ b/Niteesh/static/html/cover.html
@@ -102,7 +102,7 @@
                 <hr style="color: orange;">
             </div>
             <div class="author">
-               <p><b>Sanjitha</b></p>
+               <p><b>NiteeshMohan</b></p>
             </div>
             <div class="pub">
                 SEC
